definitionFiles/networkPolicies/svc-nginx-to-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-w-replicas
  name: nginx-service-to-deploy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-w-replicas
  type: ClusterIP
status:
  loadBalancer: {}
